Update | Added build job to pipeline file using docker

--- a/gitlab_proj/gitlab-ci_file.yml
+++ b/gitlab_proj/gitlab-ci_file.yml
@@ -7,6 +7,11 @@ stages:
   - build
   - deploy
 
+variables:
+  IMAGE_TAG: $CI_REGISTRY_IMAGE/employee-image:$CI_COMMIT_REF_SLUG
+#   PYTHON_IMAGE: python:3.8.0-slim
+#   DOCKER_IMAGE: docker:latest
+
 image: python:3.8.0-slim
 
 lint_test:
@@ -32,3 +37,16 @@ pytest:
     when: always
     paths:
       - pytest_reports/
+
+build:
+  image: docker:latest
+  services:
+    - docker:dind
+  stage: build
+  before-script:
+    - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
+  script:
+    - docker build -t $IMAGE_TAG .
+    - docker images
+    - docker push $IMAGE_TAG
+
