--- a/gitlab_proj/gitlab-ci_file.yml
+++ b/gitlab_proj/gitlab-ci_file.yml
@@ -5,16 +5,19 @@
 stages:
   - test
   - build
-  - deploy
+  - deploy_staging
 
 variables:
+  PYTHON_IMAGE: python:3.8.0-slim
+  DOCKER_IMAGE: docker:latest
   IMAGE_TAG: $CI_REGISTRY_IMAGE/employee-image:$CI_COMMIT_REF_SLUG
-#   PYTHON_IMAGE: python:3.8.0-slim
-#   DOCKER_IMAGE: docker:latest
+  HEROKU_STAGING: registry.heroku.com/[app_in_heroku]/web
+  
 
-image: python:3.8.0-slim
+# image: python:3.8.0-slim
 
 lint_test:
+  image: $PYTHON_IMAGE
   stage: test
   before-script:
     - pip3 install flake8-html -y
@@ -27,6 +30,7 @@ lint_test:
     expire_in: "2 days"
 
 pytest:
+  image: $PYTHON_IMAGE
   stage: test
   before-script:
     - pip3 install pytest-html
@@ -39,7 +43,7 @@ pytest:
       - pytest_reports/
 
 build:
-  image: docker:latest
+  image: $DOCKER_IMAGE
   services:
     - docker:dind
   stage: build
@@ -50,3 +54,15 @@ build:
     - docker images
     - docker push $IMAGE_TAG
 
+deploy_staging:
+  image: $DOCKER_IMAGE
+  services:
+    - docker:dind
+  stage: deploy_staging
+  before-script:
+    - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
+  script:
+    - ducker pull $IMAGE_TAG
+    - docker tag $IMAGE_TAG $HEROKU_STAGING
+    - docker login -u _ -p $HEROKU_STAGING_API_KEY
+    - docker push $HEROKU_STAGING
