--- a/gitlab_proj/gitlab-ci_file.yml
+++ b/gitlab_proj/gitlab-ci_file.yml
@@ -106,6 +106,10 @@ release_test:
 
 
 deploy_production:
+  only:
+    - main
+  rules:
+    - if: $CI_COMMIT_TAG =~ /^APP_NAME/ # regular expression for the app release tag
   image: $DOCKER_IMAGE
   services:
     - docker:dind
