Update | Manual prod deployment

--- a/gitlab_proj/gitlab-ci_file.yml
+++ b/gitlab_proj/gitlab-ci_file.yml
@@ -185,3 +185,4 @@ deploy_production:
     - docker push $HEROKU_PRODUCTION
     - docker run --rm -e HEROKU_API_KEY=$HEROKU_PRODUCTION_API_KEY wingrunr21/alpine-heroku-cli container:release web --app $PRODUCTION_APP
     - echo "App deployed to production server at https://$PRODUCTION_APP.herokuapp.com/"
+  when: manual
