Update | Teardown dynamic env job modified for proper controlling

--- a/gitlab_proj/gitlab-ci_file.yml
+++ b/gitlab_proj/gitlab-ci_file.yml
@@ -80,6 +80,7 @@ deploy_feature:
   environment:
     name: review/$CI_COMMIT_REF_NAME
     url: https://$CI_ENVIRONMENT_SLUG.herokuapp.com/
+    on_stop: stop_feature
   before-script:
     - export FEATURE_APP=$CI_ENVIRONMENT_SLUG
     - export HEROKU_FEATURE="registry.heroku.com/$FEATURE_APP/web"
@@ -118,16 +119,18 @@ stop_feature:
   services:
     - docker:dind
   stage: feature
+  variables:
+    GIT_STRATEGY: none
   environment:
     name: review/$CI_COMMIT_REF_NAME
+    action: stop
   before-script:
     - export FEATURE_APP=$CI_ENVIRONMENT_SLUG
   script:
     - docker run --rm -e HEROKU_API_KEY=$HEROKU_FEATURE_API_KEY wingrunr21/alpine-heroku-cli apps:destroy --app $FEATURE_APP --confirm $FEATURE_APP
     - echo "App destroyed from feature server at https://$FEATURE_APP.herokuapp.com/"
+  when: manual
   
-
-
 
 deploy_staging:
   image: $DOCKER_IMAGE
