--- a/oop/requirements.txt
+++ b/oop/requirements.txt
@@ -1,5 +1,28 @@
 # python modules with version
 # module_name == version
 
-setuptools
 autopep8
+ansible-compat==24.7.0
+ansible-core==2.17.3
+ansible-lint==24.7.0
+awscli==1.22.34
+beautifulsoup4==4.12.3
+botocore==1.23.34
+Checks==0.2
+cryptography==3.4.8
+docutils==0.17.1
+et_xmlfile==2.0.0
+lxml==5.3.0
+matplotlib==3.10.0
+matplotlib-inline==0.1.7
+numpy==2.1.3
+openpyxl==3.1.5
+pandas==2.2.3
+pytz==2024.2
+PyYAML==5.4.1
+rich==13.7.1
+setuptools==59.6.0
+soupsieve==2.6
+SQLAlchemy==2.0.37
+xlrd==2.0.1
+yamllint==1.35.1
