--- a/oop/requirements.txt
+++ b/oop/requirements.txt
@@ -8,6 +8,7 @@ ansible-lint==24.7.0
 awscli==1.22.34
 beautifulsoup4==4.12.3
 botocore==1.23.34
+bcrypt
 Checks==0.2
 cryptography==3.4.8
 docutils==0.17.1
